# ionprinter

./: .gitignore  LICENSE.md  README.md  amplifier.md  media  notes.md  project_description.md
data/: .gitignore  gauge_2.gpl
documents/: bowtie.md  bowtie_log.md  brazing_experiment.md  brief_description.md  bugs.md  cathode.html  cathode_description.md  cinematography.md  code_style_guide.md  compilation_flags.md  complete_simulator.md  component_versions.md  console_features.md  construction.md  diffusion_pump.md  experiments.md  failure_modes.md  field_solver.md  focus.md  global.ipynb  injector.md  ionolith.bib  ionolith.rdf  lab.md  linearstage.md  paywalls.md  philosophy.md  process_notes.md  project_description.md  quality.dot  quick_notes.md  references.bib  references.md  simulation.md  sparta.md  story_so_far.md  style-guide.md  style_guide.md  vapor_pressures.py
documents/log/: BPG_gauge.md  amplifier_log.md  anodizing.md  bowtie.md  bowtie_designs.md  brazing.md  brazing_log.md  bugs.md  cathode.md  cathode_description.md  cathode_log.md  cinematography.md  console_features.md  construction.md  cryocooler.md  design_goals.md  diffusion_pump.md  experiments.md  feedthroughs.md  field_solver.md  focus.md  global.ipynb  installations.md  ionization.md  lab.md  linearstage.md  log.md  magnets.md  materials.md  name.md  philosophy.md  purchases.md  quick_notes.md  sparta.md  (+3 more)
electronics/: deflectorshield_tng.brd
files/ionprinter/simulation/multiphysics/: ..gitignore.swp  CMakeLists.txt  multiphysics  multiphysics.cpp  plot_3d.h  point_in_polyhedron.h  run.sh
files/ionprinter/simulation/multiphysics/src/: CMakeLists.txt  multiphysics.cpp  multiphysics.hpp
files/ionprinter/simulation/multiphysics/test/: CMakeLists.txt  multiphysics_test.cpp
files/ionprinter/simulation/nyion/src/: CMakeLists.txt  data_structure.hpp  kernel.cl  main.cpp  multiphysics.cpp  multiphysics.hpp  nyion.cpp  nyion.hpp  nyion_test.cpp  stencils.cpp  stencils.hpp  visualize.cpp  visualize.hpp
files/ionprinter/simulation/nyion/test/: CMakeLists.txt  multiphysics_test.cpp  nyion_test.cpp
mechanical/: M353-502.stp  aluminium_ft_insert.fcstd  ceramic_standoff_test_1_cone.fcstd  ceramic_wire_feedthroughs.fcstd  ceramic_wire_feedthroughs_insert.fcstd  ceramic_wire_feedthroughs_insert_tall.fcstd  ceramic_wire_feedthroughs_insert_vertical.fcstd  new_wire_fts.fcstd  new_wire_fts_bottom.fcstd
simulation/nyion/: .gitignore  CMakeLists.txt  README.md  logo  run.sh
simulation/nyion/array_helper/: CMakeLists.txt
simulation/nyion/benchmarking/: bastardized.py  cg.py  kernel.cl  mgd2d.py  mgtest.py  mgtest3d.py  test.basic  test.py  test10.py  test2  test2.cpp  test2.py  test5.py  test6.py  test7.py  test9.py  unigrid.py
simulation/nyion/benchmarking/dumbstupid/: stupid.py
simulation/nyion/benchmarking/g++/: naive_jacobi_test.cpp
simulation/nyion/benchmarking/struct/: 1d_test.py  Digraph.gv  diagram.dot  diagram.py  display  structure_test.py  test
simulation/nyion/benchmarking/unigrid/: unigrid  unigrid.cpp
simulation/nyion/data_structure_chart/: .gitignore  Digraph.gv  diagram.dot  diagram.py  notes.md
simulation/nyion/old/SimpleElectroSim/c/: compile_3d.sh  compile_wave.sh  wave3d  wave3d.c
simulation/nyion/old/SimpleElectroSim/cpp/: .nyion.cpp.swp  nyion.cpp
simulation/nyion/old/SimpleElectroSim/python/: electro_sim.py  test.py
simulation/nyion/src/: CMakeLists.txt  CUDA_helpers.cu  Digraph.gv  array_helper.cpp  array_helper.hpp  data_structure.cpp  data_structure.hpp  data_structure_test.hpp  debug_helpers.cpp  debug_helpers.hpp  function_documentation.md  kernel.cl  main.cpp  nyan  nyion.cpp  nyion.hpp  stl_reader.cpp  unrolled_operations.cu  unrolled_operations.cuh  unrolled_operations.hpp  visualize.cpp  visualize.hpp
simulation/nyion/src/array_helper_program/: array_helper.cpp  array_helper.hpp
simulation/nyion/src/common/: CUDA_helpers.cu  CUDA_helpers.hpp  debug_helpers.cpp  debug_helpers.hpp  physical_constants.hpp  struct_transfer_helpers.hpp
simulation/nyion/src/debug_helpers/: CUDA_helpers.cu  CUDA_helpers.hpp  debug_helpers.cpp  debug_helpers.hpp
simulation/nyion/src/device_data_structure/: device_data_structure.cu  device_data_structure.hpp  device_data_structure_simple_tests.cu  device_data_structure_test.cu  device_data_structure_test.hpp  struct_transfer_helpers.cu  struct_transfer_helpers.hpp  transfer_notes.cu  unrolled_operations.cu  unrolled_operations.hpp
simulation/nyion/src/device_data_structure/documentation/: device_data_structure.cu.c  device_data_structure.cu.docu.txt  transfer_notes.cu
simulation/nyion/src/device_physics/: ray_tracer.cu
simulation/nyion/src/host_data_structure/: host_data_structure.cpp  host_data_structure.hpp  host_data_structure_test.hpp  host_data_structure_test_cases.hpp  physics_mesh.cpp
simulation/nyion/src/host_physics/: physics.cpp  physics.hpp  physics_tests.hpp
simulation/nyion/src/mesh_import/: mesh_import.cpp  mesh_import.hpp  mesh_import_tests.hpp
simulation/nyion/src/particles/: particles.hpp
simulation/nyion/src/physics/: physics.cpp  physics.hpp
simulation/nyion/src/physics_mesh/: benchmark.cpp  config.hpp  device_data_structure.cu  device_data_structure.hpp  device_transfer.cu  device_transfer_tests.cu  device_transfer_tests.hpp  physics_mesh.cpp  physics_mesh.cu  physics_mesh.hpp  physics_mesh_tests.hpp  physics_mesh_unrolled_tests.hpp  traverse_state.cpp  traverse_state.cu  traverse_state.hpp  zotes.md
simulation/nyion/src/state_persist/: state_persist.cpp  state_persist.hpp  state_persist_tests.hpp
simulation/nyion/src/test_persistence/: store_tests.cpp
simulation/nyion/src/testing/: matrix_test.cpp  matrix_test.hpp
simulation/nyion/src/visualize/: visualize.cpp  visualize.hpp
simulation/nyion/struct/: 1d_test  1d_test.cpp  1d_test.py  diagram.py  ompfl  openmp_offload.cpp  test.cpp
simulation/nyion/test/: CMakeLists.txt  benchmarks.hpp  nyion_test.cpp
software/: gauge.gpl  gauge.py  gauge_2.gpl  hatchslices.py  log.pressure  point_cloud.json  pySlice.py
sources/: sources.sh
(+783 files in other folders)
